--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/blfunex/thumbnail/issues"
   },
-  "homepage": "https://github.com/blfunex/thumbnail#readme"
+  "homepage": "https://github.com/blfunex/thumbnail#readme",
+  "devDependencies": {
+    "parcel": "^2.8.3"
+  }
 }
